# deep-q-network-mlx

./: .gitignore  README.md  main.py  pyproject.toml
dqn/: __init__.py  actions.py  atari_env.py  env.py  evaluate.py  model.py  plotting.py  replay_buffer.py  train.py  utils.py
notebooks/: overview.ipynb
weights/BeamRiderNoFrameskip-v4/: epoch_200.json  epoch_200.safetensors  training_metrics.json
weights/BreakoutNoFrameskip-v4/: epoch_200.json  epoch_200.safetensors  training_metrics.json
weights/EnduroNoFrameskip-v4/: epoch_200.json  epoch_200.safetensors  training_metrics.json
