[project]
name = "deep-q-network-mlx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ale-py>=0.8.1",
    "gymnasium[atari]>=1.1.1",
    "jupyter>=1.1.1",
    "mlx>=0.25.1",
    "numpy>=2.2.5",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deepq"]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
