[project]
name = "deep-q-network-mlx"
version = "0.1.0"
description = "Implementation of Deep Q-Network using MLX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ale-py>=0.8.1",
    "gymnasium[atari,other]>=1.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mlx>=0.25.1",
    "numpy>=2.2.5",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250516",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deepq"]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "ARG", "PTH", "N", "D"]
ignore = ["D203", "D212", "D213", "D401", "D415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
